[package]
name = "cca-veracruz-server"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = { version = "1.2.1", default-features = false }
env_logger = { version = "0.9.0" }
err-derive = "0.2"
io-utils = { path = "../io-utils", features = ["cca" ] }
lazy_static = "1.4"
log = "0.4.13"
nix = { version = "0.20.2" }
policy-utils = { path = "../policy-utils" }
proxy-attestation-client = { git = "https://github.com/veracruz-project/proxy-attestation-client", tag = "v0.2" }
raw-fd = { git = "https://github.com/veracruz-project/nitro-enclave", tag = "v0.1" }
signal-hook = { version = "0.3.13" }
structopt = { version = "0.3", features = ["wrap_help"] }
tempfile = { version = "3.2.0" }
veracruz-server = { path = "../veracruz-server", features = ["cca"] }
veracruz-utils = { path = "../veracruz-utils", features = ["cca"] }
