[package]
name = "proxy-attestation-server"
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
build = "build.rs"
description = "The Veracruz attestation web-service.  Maintains a database of enrolled isolates.  Can be used to authenticate or reject attestation tokens purporting to originate from these isolates."

[[bin]]
name = "proxy-attestation-server"
path = "src/cli.rs"
required-features = ["cli"]

[lib]
crate-type =["lib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# a feature to enable SGX native attestation. Only available on x64 platforms
sgx = ["sgx_types", "sgx_ucrypto", "sgx_urts", "psa-attestation/sgx", "transport-protocol/sgx_attestation"]
# a feature to enable CLI-only dependencies
# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
cli = ["structopt"]

# a feature to enable PSA native attestation.
# Note: Final attestation is always PSA. This is just to enable platforms
# that use PSA for their native attestation.
linux = ["psa-attestation/linux"]
# tz = ["psa-attestation/tz"]
nitro = ["serde_cbor", "nitro-enclave-attestation-document"]

[dependencies]
rouille = "=3.2.1"
lazy_static = "1.3"
base64 = "0.10"
transport-protocol = { path = "../transport-protocol" }
curl = "=0.4.35"
rand = "0.7"
stringreader = "0.1"
percent-encoding = "2.1"
openssl = "0.10.24"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["sqlite", "numeric" ] }
dotenv = "0.9.0"
hex = "=0.4.2"
psa-attestation = { path = "../psa-attestation" }
ring = { path = "../third-party/ring" }
futures = "0.3"
veracruz-utils = { path = "../veracruz-utils", features = ["std"] }
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-http = "2.2.0"
async-std = "1.5"
# Force the version on async-io. This solves a dependency issue on socket2.
async-io = "=1.3.1"
env_logger = "0.7"
log = "=0.4.13"
err-derive = "0.2"
serde_cbor = {version = "0.11", optional = true }
nitro-enclave-attestation-document = { path = "../third-party/nitro-enclave-attestation-document", optional = true }
nb-connect = "=1.0.3"
sgx_types = { path = "../third-party/rust-sgx-sdk/sgx_types", optional = true }
sgx_ucrypto = { path = "../third-party/rust-sgx-sdk/sgx_ucrypto", optional = true }
sgx_urts = { path = "../third-party/rust-sgx-sdk/sgx_urts", optional = true }
structopt = { version = "0.3", optional = true, features = ["wrap_help"] }
http = "=0.2.4"

[dev-dependencies]
sgx_urts = { path="../third-party/rust-sgx-sdk/sgx_urts" }
sgx-root-enclave-bind = { path = "../sgx-root-enclave-bind" }
psa-attestation = { path = "../psa-attestation" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_ucrypto = { path="../third-party/third-party/rust-sgx-sdk/sgx_ucrypto",  optional = true }
sgx_types = { path="../third-party/third-party/rust-sgx-sdk/sgx_types",  optional = true }
