[package]
name = "veracruz-server"
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "An untrusted server/bridge that allows the outside world and the trusted Veracruz runtime to communicate with each other."

[[bin]]
name = "veracruz-server"
path = "src/cli.rs"
required-features = ["cli"]

[features]
sgx = ["veracruz-utils/std","sgx_types", "sgx_urts", "transport-protocol/sgx_attestation", "runtime-manager-bind", "sgx-root-enclave-bind", "tempfile"]
# tz = ["veracruz-utils/std", "veracruz-utils/tz", "transport-protocol/tz", "optee-teec", "uuid"]
nitro = ["veracruz-utils/nitro", "bincode", "serde/derive", "byteorder", "nix", "ssh2" ]
linux = ["veracruz-utils/linux", "bincode"]
debug = []
# a feature to enable CLI-only dependencies
# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
cli = ["structopt", "actix-rt", "env_logger"]

[dependencies]
dirs = "1.0.2"
veracruz-utils = { path = "../veracruz-utils" }
serde_json = { path = "../third-party/serde_json" }
transport-protocol = { path = "../transport-protocol"}
rouille = "=3.2.1"
base64 = "0.10.1"
untrusted = "0.6.2"
ring = "0.16"
stringreader = "0.1"
curl = "=0.4.35"
lazy_static = "1.4"
actix-web = "3.3.2"
actix-http = "2.2.0"
futures = "0.3"
log = "0.4"
err-derive = "0.2"
pinecone = "0.2"
hex = "=0.4.2"
webpki = { path = "../third-party/webpki" }
rustls = { path = "../third-party/rustls" }
bincode = { path = "../third-party/bincode", default-features = false, optional = true }
serde = { path = "../third-party/serde/serde", default-features = false, optional = true }
byteorder = { version = "1.3.2", optional = true }
nix = { version = "0.15", optional = true }
ssh2 = {version = "0.8.3", optional = true }
tempfile = { version = "3.2.0", optional = true }
sgx_types = { path="../third-party/rust-sgx-sdk/sgx_types", optional = true }
sgx_urts = { path="../third-party/rust-sgx-sdk/sgx_urts", optional = true }
runtime-manager-bind = { path = "../runtime-manager-bind", optional = true }
sgx-root-enclave-bind = { path = "../sgx-root-enclave-bind", optional = true }
# optee-teec = { path = "../rust-optee-trustzone-sdk/optee-teec", optional = true }
uuid = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true, features = ["wrap_help"] }
env_logger = { version = "0.7", optional = true }
actix-rt = { version = "1.0.0", optional = true }
http = "=0.2.4"
