[package]
authors = ["The Veracruz Development Team"]
name = "cca-runtime-manager"
version = "0.3.0"
edition = "2018"

[[bin]]
name = "init"
path = "src/main.rs"

[features]
fake-host = []

[dependencies]
anyhow = "1.0"
bincode = { version = "1.2.1", default-features = false }
env_logger = "0.10.0"
hex = "0.4"
io-utils = { path = "../io-utils", features = [ "cca" ] }
libc = "0.2.144"
log = "0.4.13"
nix = "0.26"
psa-attestation = { path = "../psa-attestation", features = [ "cca" ] }
runtime-manager = { path = "../runtime-manager", default-features = false, features = [ "cca" ] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }
veracruz-utils = { path = "../veracruz-utils", features = ["std"] }
