# workspaces/linux-host/Cargo.toml:
# Workspace for untrusted Linux services and tests
#
# AUTHORS
#
# The Veracruz Development Team.
#
# COPYRIGHT
#
# See the `LICENSE_MIT.markdown` file in the Veracruz root director for licensing
# and copyright information.

cargo-features = ["resolver"]

[workspace]
exclude = [
  "crates/third-party/rust-mbedtls",
  "crates/third-party/rust-psa-crypto",
  "src/attestation",
]
members = [
  "crates/cca-veracruz-server",
  "crates/tests",
  "crates/veracruz-client",
  "src/cca-host"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
