# workspaces/cca-runtime/Cargo.toml:
# Workspace for trusted Linux CCA services
#
# AUTHORS
#
# The Veracruz Development Team.
#
# COPYRIGHT
#
# See the `LICENSE_MIT.markdown` file in the Veracruz root director for licensing
# and copyright information.

cargo-features = ["resolver"]

[workspace]
exclude = [
  "crates/icecap/sysroot/libc",
  "crates/io-utils",
  "crates/runtime-manager",
  "crates/third-party/rust-mbedtls",
  "crates/third-party/rust-psa-crypto",
  "crates/third-party/wasmi",
  "crates/veracruz-utils",
]
members = [
  "src/cca-runtime",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
