# workspaces/icecap-runtime/Cargo.toml:
# Workspace for trusted IceCap services
#
# AUTHORS
#
# The Veracruz Development Team.
#
# COPYRIGHT
#
# See the `LICENSE_MIT.markdown` file in the Veracruz root director for licensing
# and copyright information.

cargo-features = ["resolver"]

[workspace]
exclude = [
  "crates/icecap/sysroot/libc",
  "crates/third-party/rust-mbedtls",
  "crates/third-party/rust-psa-crypto",
  "crates/third-party/wasmi",
]
members = [
  "crates/runtime-manager",
  "src/virtio-console-server",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[patch.crates-io]
atty = { path = "crates/icecap/third-party/atty" }
directories-next = { path = "crates/icecap/third-party/directories-next/directories" }
errno = { path = "crates/icecap/third-party/errno" }
getrandom = { path = "crates/icecap/third-party/getrandom" }
libc = { path = "crates/icecap/sysroot/libc" }
region = { path = "crates/icecap/third-party/region" }
ring = { path = "crates/third-party/ring" }
rustls = { path = "crates/third-party/rustls/rustls" }
webpki = { path = "crates/third-party/webpki" }
