cargo-features = ["resolver"]

[workspace]
members = [
  "crates/execution-engine",
  "crates/linux-root-enclave",
  "crates/platform-services",
  "crates/psa-attestation",
  "crates/runtime-manager",
  "crates/runtime-manager-bind",
  "crates/session-manager",
  "crates/transport-protocol",
  "crates/veracruz-utils",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[patch.crates-io]
ring = { git = "https://github.com/veracruz-project/ring.git", branch = "veracruz" }
rustls = { git = "https://github.com/veracruz-project/rustls.git", branch = "veracruz" }
serde = { git = "https://github.com/veracruz-project/serde.git", branch = "veracruz", features = ["derive"] }
webpki = { git = "https://github.com/veracruz-project/webpki.git", branch = "veracruz" }
