cargo-features = ["resolver"]

[workspace]
members = [
  "crates/proxy-attestation-server",
  "crates/veracruz-client",
  "crates/veracruz-server",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[patch.crates-io]
rustls = { git = "https://github.com/veracruz-project/rustls.git", branch = "veracruz" }
serde = { git = "https://github.com/veracruz-project/serde.git", features = ["derive"], branch = "veracruz" }
