[package]
authors = ["The Veracruz Development Team"]
name = "cca-runtime"
version = "0.3.0"
edition = "2018"
resolver = "2"

[[bin]]
name = "init"
path = "src/main.rs"

[features]
simulation = []

[dependencies]
anyhow = "1.0"
bincode = { version = "1.2.1", default-features = false }
env_logger = "0.9.0"
hex = "0.4"
io-utils = { path = "../../crates/io-utils", features = [ "cca" ] }
libc = "0.2.124"
log = "0.4.13"
nix = "0.22.3"
runtime-manager = { path = "../../crates/runtime-manager", default-features = false, features = [ "cca" ] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }
veracruz-utils = { path = "../../crates/veracruz-utils", features = ["std"] }
rustix = "0.37.19"
