[package]
authors = ["The Veracruz Development Team"]
name = "init"
version = "0.3.0"
edition = "2018"

[features]
simulation = []

[dependencies]
anyhow = "1.0"
bincode = { version = "1.2.1", default-features = false }
env_logger = "0.9.0"
hex = "0.4"
io-utils = { path = "../../../../io-utils", features = [ "linux", "cca" ] }
libc = "0.2.124"
log = "0.4.13"
nix = "0.20.2"
runtime_manager_enclave = { path = "../../../../runtime-manager", features = ["linux", "cca"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }
veracruz-utils = { path = "../../../../veracruz-utils", features = ["std"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
